--- a/django_essencial/cap3/pages/index.html
+++ b/django_essencial/cap3/pages/index.html
@@ -1,3 +1,30 @@
-<p>
-    textoooooooo
-</p>
+{% load webdesign %}
+<div class="jumbotron">
+    <div class="container">
+        <h1>Seja bem-vindo</h1>
+        <p>insira...</p>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <h2>Sobre aaaaaaaeeeeeeee</h2>
+            <p>{% lorem %}</p>
+        </div>
+        <div class="col-md-6">
+            <h2>Contato</h2>
+            <p>{% lorem %}</p>
+            <p>
+                <a class="btn btn-default" href="{% url 'page' 'contact' %}" role="button">Contato</a>
+            </p>
+        </div>
+    </div>
+</div>
+
+<hr />
+
+<footer>
+    <div class="container">
+        <p>&copy; Medeiros {% now 'Y' %}</p>
+    </div>
+</footer>
