--- a/django_essencial/cap3/pages/index.html
+++ b/django_essencial/cap3/pages/index.html
@@ -1,4 +1,3 @@
-{% load webdesign %}
 <div class="jumbotron">
     <div class="container">
         <h1>Seja bem-vindo</h1>
@@ -8,7 +7,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            <h2>Sobre aaaaaaaeeeeeeee</h2>
+            <h2>Sobre</h2>
             <p>{% lorem %}</p>
         </div>
         <div class="col-md-6">
